# WyeVisit

./: db.sqlite3  db.sqlite3.DELETE  db1.sqlite3  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt
django_project/: settings.py  urls.py
wv_app/: admin.py  models.py  models.py.BACKUP  models.py.BACKUP2  urls.py  views.py
wv_app/migrations/: 0001_initial.py  0002_auto_20240109_2006.py  0003_auto_20240109_2041.py
wv_app/templates/: attractions.html  base.html  base.html.BACKUP  home.html  search_attractions.html  suggest.html
wv_app/templates/attractions/: detail.html  list.html  list.html.BACKUP
wv_app/templates/auth/: user_dashboard.html
wv_app/templates/profiles/: detail.html  list.html  list.html.BACKUP
