[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
Authlib = "1.3.0"
requests = "2.31.0"
django-leaflet = "0.29.0"
[tool.poetry.dev-dependencies]
